// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add provider 1`] = `
"{
  "module": {
    "test": {
      "providers": {
        "test": "test.provider1"
      },
      "source": "./assets/__cdktf_module_asset_26CE565C/hash/test/fixtures/hcl-module"
    }
  },
  "provider": {
    "test": [
      {
        "access_key": "key",
        "alias": "provider1"
      }
    ]
  },
  "terraform": {
    "required_providers": {
      "test": {
        "version": "~> 2.0"
      }
    }
  }
}"
`;

exports[`complex providers 1`] = `
"{
  "module": {
    "test": {
      "param1": "name",
      "param2": 1,
      "param3": [
        "id1",
        "id2"
      ],
      "providers": {
        "test.dst": "test.provider2",
        "test.src": "test.provider1"
      },
      "source": "./assets/__cdktf_module_asset_26CE565C/hash/test/fixtures/hcl-module"
    }
  },
  "provider": {
    "test": [
      {
        "access_key": "key",
        "alias": "provider1"
      },
      {
        "access_key": "key",
        "alias": "provider2"
      }
    ]
  },
  "terraform": {
    "required_providers": {
      "test": {
        "version": "~> 2.0"
      }
    }
  }
}"
`;

exports[`depend on module 1`] = `
"{
  "module": {
    "test": {
      "source": "./assets/__cdktf_module_asset_26CE565C/hash/test/fixtures/hcl-module"
    }
  },
  "provider": {
    "test": [
      {
      }
    ]
  },
  "resource": {
    "test_resource": {
      "resource": {
        "depends_on": [
          "module.test"
        ],
        "name": "foo"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "test": {
        "version": "~> 2.0"
      }
    }
  }
}"
`;

exports[`depend on other module 1`] = `
"{
  "module": {
    "test_1": {
      "source": "./assets/__cdktf_module_asset_26CE565C/hash/test/fixtures/hcl-module"
    },
    "test_2": {
      "depends_on": [
        "module.test_1"
      ],
      "source": "./assets/__cdktf_module_asset_26CE565C/hash/test/fixtures/hcl-module"
    }
  }
}"
`;

exports[`minimal configuration 1`] = `
"{
  "module": {
    "test": {
      "source": "./assets/__cdktf_module_asset_26CE565C/hash/test/fixtures/hcl-module"
    }
  }
}"
`;

exports[`multiple providers 1`] = `
"{
  "module": {
    "test": {
      "providers": {
        "differentType": "differentType",
        "test": "test"
      },
      "source": "./assets/__cdktf_module_asset_26CE565C/hash/test/fixtures/hcl-module"
    }
  },
  "provider": {
    "differentType": [
      {
        "access_key": "key"
      }
    ],
    "test": [
      {
        "access_key": "key"
      }
    ]
  },
  "terraform": {
    "required_providers": {
      "differentType": {
        "version": "~> 2.0"
      },
      "test": {
        "version": "~> 2.0"
      }
    }
  }
}"
`;

exports[`pass variables 1`] = `
"{
  "module": {
    "test": {
      "param1": "name",
      "param2": 1,
      "param3": [
        "id1",
        "id2"
      ],
      "source": "./assets/__cdktf_module_asset_26CE565C/hash/test/fixtures/hcl-module"
    }
  }
}"
`;

exports[`reference module 1`] = `
"{
  "module": {
    "test": {
      "source": "./assets/__cdktf_module_asset_26CE565C/hash/test/fixtures/hcl-module"
    }
  },
  "provider": {
    "test": [
      {
      }
    ]
  },
  "resource": {
    "test_resource": {
      "resource": {
        "name": "\${module.test.name}"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "test": {
        "version": "~> 2.0"
      }
    }
  }
}"
`;

exports[`reference module list 1`] = `
"{
  "module": {
    "test": {
      "source": "./assets/__cdktf_module_asset_26CE565C/hash/test/fixtures/hcl-module"
    }
  },
  "provider": {
    "test": [
      {
      }
    ]
  },
  "resource": {
    "test_resource": {
      "resource": {
        "name": "test",
        "names": "\${module.test.names}"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "test": {
        "version": "~> 2.0"
      }
    }
  }
}"
`;

exports[`set variable 1`] = `
"{
  "module": {
    "test": {
      "param1": "value1",
      "source": "./assets/__cdktf_module_asset_26CE565C/hash/test/fixtures/hcl-module"
    }
  }
}"
`;

exports[`simple provider 1`] = `
"{
  "module": {
    "test": {
      "providers": {
        "test": "test.provider1"
      },
      "source": "./assets/__cdktf_module_asset_26CE565C/hash/test/fixtures/hcl-module"
    }
  },
  "provider": {
    "test": [
      {
        "access_key": "key",
        "alias": "provider1"
      }
    ]
  },
  "terraform": {
    "required_providers": {
      "test": {
        "version": "~> 2.0"
      }
    }
  }
}"
`;
